samples/_failures_safe/1761693372_2f1c5d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b8a30d77.c: In function ‘main’:
./samples/SAFE/__tmp_b8a30d77.c:144:5: error: expected expression at end of input
  144 |     if (scanf("%zu %zu", &rows1, &
      |     ^~
./samples/SAFE/__tmp_b8a30d77.c:144:5: error: expected declaration or statement at end of input
